# c_projects

./: .gitignore  .gitmodules  README.md
.github/workflows/: codeql.yml  cppcheck.yml
completed/CLI Single Parser [CMake argparse]/: CMakeLists.txt  README.md
completed/CLI Single Parser [CMake argparse]/apps/: CMakeLists.txt  app_name.c
completed/GSL Framework/: CMakeLists.txt  README.md
completed/GSL Framework/src/: CMakeLists.txt  main.c
tools/lvgl/docs/: requirements.txt
work_in_progress/Array Wrapper Case Study/: CMakeLists.txt  README.md
work_in_progress/Array Wrapper Case Study/apps/: CMakeLists.txt  app.c
work_in_progress/Custom String Library/: CMakeLists.txt  README.md
work_in_progress/Custom String Library/apps/: CMakeLists.txt  app.c
work_in_progress/Custom String Library/include/Custom_String/: custom_string.h
work_in_progress/Effective_C/: CMakeLists.txt  README.md
work_in_progress/Effective_C/apps/: CMakeLists.txt  hello_world.c  nested_function.c
work_in_progress/Focus Precision Analyze/: CMakeLists.txt  README.md  main.c
work_in_progress/Focus Precision Analyze/src/: CMakeLists.txt  focus_precision.c  focus_precision_app.c  focus_precision_app.gresource  focus_precision_app.h  focus_precision_resources.c  main_app_window.c  main_app_window.h  main_app_window.ui
work_in_progress/GTK Test/: CMakeLists.txt
work_in_progress/Heap String Library/: CMakeLists.txt  README.md
work_in_progress/Heap String Library/apps/: CMakeLists.txt  app.c
work_in_progress/Linked List/: CMakeLists.txt  README.md
work_in_progress/Linked List/src/: CMakeLists.txt  linked_list.c
work_in_progress/Maximum Subarray/: CMakeLists.txt  README.md
work_in_progress/Maximum Subarray/src/: CMakeLists.txt  maximum_subarray.c
work_in_progress/Sort Algorithms/: CMakeLists.txt  README.md
work_in_progress/Sort Algorithms/src/: CMakeLists.txt  inplace_insertion_sort.c
work_in_progress/System Path Validators/: CMakeLists.txt  README.md
work_in_progress/System Path Validators/include/: spvalid.h
work_in_progress/System Path Validators/src/: CMakeLists.txt  main.c
work_in_progress/Tree/: CMakeLists.txt  README.md
work_in_progress/Tree/src/: CMakeLists.txt  tree_implementation.c
